services-depl/gateway_class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: example-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
