services-depl/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-depl
  labels:
    app: product-service
    type: product-service-app
spec:
  template:
    metadata:
      labels:
        app: product-service
        type: product-service-depl
    spec:
      containers:
      - name: product-service
        image: sachetwasti61/product-service
        ports:
        - containerPort: 8080
  replicas: 1
  selector:
    matchLabels:
      app: product-service
---
apiVersion: v1
kind: Service
metadata:
  name: product-svc
spec:
  type: ClusterIP
  selector:
    app: product-service
    type: product-service-depl
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
