services-depl/ui-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: sachetwasti61/ecomm-ui
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-svc
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: react-app
